Updated Vendor Application text. Minor spacing/consistency edits on other pages Files modified - [CompanyProfile.html,VendorApplication.html,ManageMunicipalities.html,UserCreation.variables.json,DataEntry.html,CompanyUsers.html,ManageMunicipalityVendors.html]

--- a/src/main/webapp/pages/CompanyProfile/CompanyProfile.html
+++ b/src/main/webapp/pages/CompanyProfile/CompanyProfile.html
@@ -25,7 +25,7 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow10">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn25" padding="unset 2em">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn25">
                         <wm-liveform novalidate="false" errormessage="" title="Vendor Info" iconclass="wi wi-edit" defaultmode="Edit" dataset="bind:Variables.UpdateVendorData.dataSet" captionalign="left" captionposition="top" name="liveform1" formdata="bind:Variables.CurrentVendorObj.firstRecord"
                         class="panel-primary" on-beforeservicecall="liveform1Beforeservicecall($event, $operation, $data)">
                             <wm-layoutgrid columns="3" name="layoutgrid1">
@@ -133,7 +133,7 @@
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow12_1">
-                    <wm-gridcolumn columnwidth="12" name="gridcolumn27" padding="unset 2em">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn27">
                         <wm-panel iconclass="wi wi-notepad" name="panel1" title="Licenses" class="panel-primary">
                             <wm-livegrid formlayout="dialog" name="livegrid1">
                                 <wm-grid gridfirstrowselect="true" editmode="dialog" title="" dataset="bind:Variables.VendorLicensesData.dataSet" navigation="Classic" name="grid1" filtermode="multicolumn" exportformat="EXCEL">
